--- a/README
+++ b/README
@@ -1,54 +1,13 @@
-This file is for you to describe the DevContest application. Typically
-you would include information such as the information below:
-
 Installation and Setup
 ======================
 
+1. Download setup.sh:
 
-1. Install ``DevContest`` using easy_install (as root)::
-   -----------------------------------------------------
+	wget http://github.com/downloads/yetty/DevContest/setup.sh
 
-		easy_install DevContest
+2. Run it as root:
 
+	su
+	sh setup.sh
 
-2. From source codes (as root)::
-   -------------------
-
-		python setup.py install
-
-	- sometimes it is wrong. Just try it once more.
-
-
-
-
-Make a config file as follows::
-
-	paster make-config DevContest config.ini
-
-Tweak the config file as appropriate and then setup the application::
-
-	paster setup-app config.ini
-
-
-Running
-=======
-
-	paster serve config.ini
-
-In your browser:
-	http://localhost:8888
-
-	login: admin
-	password: admin
-
-
-Notes
-=====
-
-- v /model/db/runner.py se da nastavit, pod jakym uzivatelem se spousti skripty.
-	Je potreba, aby se u tohoto uzivatele nemuselo pri sudu zadavat heslo.
-	To se da zajistit pridanim radku do souboru.
-	root@YETTY # visudo
-	"""
-	ALL     ALL = (__username__) NOPASSWD:ALL
-	"""
+and it is finished! Enjoy.
