--- a/devcontest/i18n/cs/LC_MESSAGES/devcontest.po
+++ b/devcontest/i18n/cs/LC_MESSAGES/devcontest.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: DevContest 0.1\n"
 "Report-Msgid-Bugs-To: juda.kaleta@gmail.cm\n"
 "POT-Creation-Date: 2010-07-12 18:24+0200\n"
-"PO-Revision-Date: 2010-07-13 20:47+0200\n"
+"PO-Revision-Date: 2010-07-22 18:24+0200\n"
 "Last-Translator: Juda Kaleta <juda.kaleta@gmail.com>\n"
 "Language-Team: cs\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
@@ -17,6 +17,47 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 0.9.5\n"
+
+#: devcontest/controllers/auth.py:39
+msgid "Login failed"
+msgstr "Přihlášení selhalo"
+
+#: devcontest/controllers/registration.py:27
+msgid "Enter your login"
+msgstr "Zadejte uživatelské jméno"
+
+#: devcontest/controllers/registration.py:29
+msgid "This login name is already used"
+msgstr "Uživatelské jméno je již používáno"
+
+#: devcontest/controllers/registration.py:31
+msgid "Passwords are empty or wrong"
+msgstr "Hesla jsou prázdná nebo chybná"
+
+#: devcontest/controllers/registration.py:33
+msgid "Enter your e-mail"
+msgstr "Zadejte e-mail"
+
+#: devcontest/controllers/registration.py:35
+msgid "E-mail is already registered"
+msgstr "E-mail je již zaregistrován"
+
+#: devcontest/controllers/registration.py:39
+msgid "Registration failed. Sorry. Please, contact us."
+msgstr "Registrace selhala, kontaktujte administrátora."
+
+#: devcontest/controllers/task.py:75
+msgid "Unknown file type"
+msgstr "Neznámý formát souboru"
+
+#: devcontest/controllers/task.py:84
+msgid "Unexpected error"
+msgstr "Neočekávaná chyba"
+
+#: devcontest/controllers/task.py:98
+#, fuzzy
+msgid "Wrong output"
+msgstr "pro výstup"
 
 #: devcontest/templates/archiv.mako:3 devcontest/templates/archiv.mako:6
 msgid "The Archive"
@@ -426,9 +467,9 @@ msgstr "Úprava profilu"
 msgid "Administrator"
 msgstr "Administrátor"
 
-#~ msgid "Název sout\\u011b\\u017ee"
+#~ msgid "Enter your log"
 #~ msgstr ""
 
-#~ msgid "Vytvo\\u0159it"
+#~ msgid "Enter your e-mail)"
 #~ msgstr ""
 
