--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Installation and Setup
 
 1. Download setup.sh:
 
-	wget http://github.com/downloads/yetty/DevContest/setup-0.3.sh
+	wget https://raw.github.com/yetty/DevContest/0.4/setup-0.4.sh
 
 2. Run it as root:
 
